--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorControlNormal">#A8A8A8</color>
+    <color name="textColor">#333333</color>
+    <color name="textColorLight">#666666</color>
+    <color name="textColorLightGrey">#999999</color>
+    <color name="textColorHint">#999999</color>
+    <color name="windowBackground">#FAFAFA</color>
+    <color name="windowBackgroundGrey">#EEEEEE</color>
 </resources>
