--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,38 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/colorControlNormal</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColorHint">@color/textColorHint</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+        <!-- 自定义属性 -->
+        <item name="statusBarBackground">@color/colorPrimary</item>
+        <item name="activityBackground">@color/windowBackground</item>
+    </style>
+
+    <!-- 把该属性改为false即可使menu位置位于toolbar之下 -->
+    <style name="OverflowMenuStyle" parent="Widget.AppCompat.Light.PopupMenu.Overflow">
+        <item name="overlapAnchor">false</item>
+    </style>
+
+    <!-- 状态栏占位布局 -->
+    <style name="StatusBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/statusBarHeight</item>
+    </style>
+
+    <style name="StatusBar.WithBackground">
+        <item name="android:background">?attr/statusBarBackground</item>
     </style>
 
 </resources>
