--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <cn.com.brother.studio.view.FixViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
